# libitmf

./: .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  Architecture.md  BUILD.md
examples/javascript/: decoder.html  encoder.html  itmf.js  itmf.wasm
src/bmllib/core/: CMakeLists.txt  bmlbitutils.cxx  bmlbitutils.h  bmltypes.cxx
src/bmllib/tests/: CMakeLists.txt  bmlbitutilstests.cc
src/itmflib/core/: CMakeLists.txt  bmlbitutils.cxx  bmlbitutils.h  bmltypes.cxx  bmltypes.h  defines.h  itmfenums.h  itmffile.cxx  itmffile.h  itmfunits.cxx  itmfunits.h
src/itmflib/javascript/emscripten/: CMakeLists.txt  glue_itmf.cpp  glue_itmf.js  itmf_web.idl  itmf_webidl_glue_wrapper.cc  itmf_webidl_wrapper.cc  itmf_webidl_wrapper.h
src/itmflib/tests/: CMakeLists.txt  bmlbitutilstests.cc  bmltypestest.cc
src/itmflib/tools/: CMakeLists.txt  itmfdecoder.cxx  itmfencoder.cxx
src/libitmf/container/: CMakeLists.txt  bmlbitutils.h  bmltypes.cxx  itmfenums.h  itmffile.h
src/libitmf/core/: CMakeLists.txt  bmlbitutils.cxx  bmlbitutils.h  bmltypes.cxx  bmltypes.h  itmffile.cxx  itmffile.h  itmfunits.cxx  itmfunits.h
src/libitmf/javascript/emscripten/: itmf_webidl_wrapper.cc  itmf_webidl_wrapper.h
src/libitmf/scene_graph/: CMakeLists.txt  CMakeLists.txt.in  attributes.h  elements.cxx  elements.h  enums.h  xml.cxx  xml.h
src/libitmf/tests/: CMakeLists.txt  bmltypestest.cc  bmltypestests.cc
src/libitmf/tests/container/: CMakeLists.txt  bmlbitutilstests.cc  itmfunitstests.cc
src/libitmf/tests/scene_graph/: CMakeLists.txt  attributestests.cc  elementstests.cc  xmltests.cc
src/libitmf/tools/: CMakeLists.txt  itmfdecoder.cxx  itmfencoder.cxx
